--- a/documentation/index.html
+++ b/documentation/index.html
@@ -33,15 +33,21 @@
 <h1 id="nytimespopulararticles">NytimesPopularArticles</h1>
 <p>This project was generated with <a href="https://github.com/angular/angular-cli">Angular CLI</a> version 11.1.4.</p>
 <h2 id="development-server">Development server</h2>
-<p>Run <code>ng serve</code> for a dev server. Navigate to <code>http://localhost:4200/</code>. The app will automatically reload if you change any of the source files.</p>
-<h2 id="code-scaffolding">Code scaffolding</h2>
-<p>Run <code>ng generate component component-name</code> to generate a new component. You can also use <code>ng generate directive|pipe|service|class|guard|interface|enum|module</code>.</p>
+<p>Run <code>npm install</code> then run <code>ng serve</code> for a dev server. Navigate to <code>http://localhost:4200/</code>. The app will automatically reload if you change any of the source files.</p>
+<h2 id="local-json-server">Local JSON server</h2>
+<p>git clone this <a href="https://github.com/techiediaries/fake-api-jwt-json-server.git">repo</a>.
+Go inside the repo&#39;s directory then run
+<code>npm install</code> then <code>npm run start-auth</code></p>
 <h2 id="build">Build</h2>
 <p>Run <code>ng build</code> to build the project. The build artifacts will be stored in the <code>dist/</code> directory. Use the <code>--prod</code> flag for a production build.</p>
 <h2 id="running-unit-tests">Running unit tests</h2>
 <p>Run <code>ng test</code> to execute the unit tests via <a href="https://karma-runner.github.io">Karma</a>.</p>
 <h2 id="running-end-to-end-tests">Running end-to-end tests</h2>
 <p>Run <code>ng e2e</code> to execute the end-to-end tests via <a href="http://www.protractortest.org/">Protractor</a>.</p>
+<h2 id="generating-test-coverage-reports">Generating test coverage reports</h2>
+<p>Run <code>ng test --code-coverage</code> you will then find the generated files inside the coverage folder.</p>
+<h2 id="generating-code-documentation">Generating code documentation</h2>
+<p>Run <code>npm run compodoc</code> you will then find the generated docs inside the documentation folder</p>
 <h2 id="further-help">Further help</h2>
 <p>To get more help on the Angular CLI use <code>ng help</code> or go check out the <a href="https://angular.io/cli">Angular CLI Overview and Command Reference</a> page.</p>
 
