--- a/documentation/injectables/AppEffects.html
+++ b/documentation/injectables/AppEffects.html
@@ -56,7 +56,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/state/app.effects.ts</code>
+            <code>src/app/state/effects/app.effects.ts</code>
         </p>
 
             <p class="comment">
@@ -81,7 +81,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/app/state/app.effects.ts:8</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/app/state/effects/app.effects.ts:8</a></div>
                             </td>
                         </tr>
 
