--- a/documentation/injectables/ArticleService.html
+++ b/documentation/injectables/ArticleService.html
@@ -63,7 +63,7 @@
                 <h3>Description</h3>
             </p>
             <p class="comment">
-                <p>Responsiple for consuming with the NY Times API</p>
+                <p>Responsible for consuming with the NY Times API</p>
 
             </p>
 
@@ -549,7 +549,7 @@ import { ArticleSearchResponse } from &#x27;../models/article-search.model&#x27;
 
 
 /**
- * Responsiple for consuming with the NY Times API
+ * Responsible for consuming with the NY Times API
  */
 @Injectable({
   providedIn: &#x27;root&#x27;
