--- a/documentation/injectables/AuthService.html
+++ b/documentation/injectables/AuthService.html
@@ -63,7 +63,7 @@
                 <h3>Description</h3>
             </p>
             <p class="comment">
-                <p>Responsiple for sending auth requests to the backend</p>
+                <p>Responsible for sending auth requests to the backend</p>
 
             </p>
 
@@ -381,7 +381,7 @@ import { Auth } from &#x27;../models/auth.model&#x27;;
 
 
 /**
- * Responsiple for sending auth requests to the backend
+ * Responsible for sending auth requests to the backend
  */
 @Injectable({
   providedIn: &#x27;root&#x27;
