--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -83,9 +83,9 @@
             </td>
             <td>component</td>
             <td>AppComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(1/2)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(1/3)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -895,13 +895,25 @@
         <tr class="medium">
             <td>
                 <!-- miscellaneous -->
-                <a href="./injectables/AppEffects.html">src/app/state/app.effects.ts</a>
+                <a href="./injectables/AppEffects.html">src/app/state/effects/app.effects.ts</a>
             </td>
             <td>injectable</td>
             <td>AppEffects</td>
             <td align="right" data-sort="50">
                 <span class="coverage-percent">50 %</span>
                 <span class="coverage-count">(1/2)</span>
+            </td>
+        </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/SpinnerEffects.html">src/app/state/effects/spinner.effects.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>SpinnerEffects</td>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(3/4)</span>
             </td>
         </tr>
         <tr class="very-good">
