--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -80,6 +80,8 @@
         <li>
             <b>bootstrap</b> : ^4.6.0</li>
         <li>
+            <b>ngx-spinner</b> : ^10.0.1</li>
+        <li>
             <b>rxjs</b> : ~6.6.0</li>
         <li>
             <b>tslib</b> : ^2.0.0</li>
