--- a/documentation/modules/AppModule.html
+++ b/documentation/modules/AppModule.html
@@ -291,9 +291,11 @@ import { SharedModule } from &#x27;./shared/shared.module&#x27;;
 import { HomeComponent } from &#x27;./pages/home/home.component&#x27;;
 import { HttpClientModule, HTTP_INTERCEPTORS } from &#x27;@angular/common/http&#x27;;
 import { reducers, metaReducers } from &#x27;./state&#x27;;
-import { AppEffects } from &#x27;./state/app.effects&#x27;;
+import { AppEffects } from &#x27;./state/effects/app.effects&#x27;;
 import { AuthInterceptor } from &#x27;./interceptors/auth.interceptor&#x27;;
 import { AuthExpiredInterceptor } from &#x27;./interceptors/auth-expired.interceptor&#x27;;
+import { NgxSpinnerModule } from &#x27;ngx-spinner&#x27;;
+import { SpinnerEffects } from &#x27;./state/effects/spinner.effects&#x27;;
 
 @NgModule({
   declarations: [
@@ -323,7 +325,8 @@ import { AuthExpiredInterceptor } from &#x27;./interceptors/auth-expired.interce
     }),
     !environment.production ? StoreDevtoolsModule.instrument() : [],
     StoreDevtoolsModule.instrument({ maxAge: 25, logOnly: environment.production }),
-    EffectsModule.forRoot([AppEffects])
+    EffectsModule.forRoot([AppEffects, SpinnerEffects]),
+    NgxSpinnerModule
   ],
   providers: [
     {
